testdata/baselines/reference/submodule/compiler/exportDefaultInterfaceAndTwoFunctions.errors.txt
exportDefaultInterfaceAndTwoFunctions.ts(2,1): error TS2393: Duplicate function implementation.
exportDefaultInterfaceAndTwoFunctions.ts(3,1): error TS2393: Duplicate function implementation.


==== exportDefaultInterfaceAndTwoFunctions.ts (2 errors) ====
    export default interface A { a: string; }
    export default function() { return 1; }
    ~~~~~~
!!! error TS2393: Duplicate function implementation.
    export default function() { return 2; }
    ~~~~~~
!!! error TS2393: Duplicate function implementation.
    